--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "plugin/beorn_lib"]
-	path = plugin/beorn_lib
-	url = https://github.com/PAntoine/beorn_lib.git
+[submodule "plugin\\beorn_lib"]
+	path = plugin\\beorn_lib
+	url = git@github.com:PAntoine/beorn_lib.git
+	branch = release_1.0.5
