--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,3 @@
-[submodule "plugin\\beorn_lib"]
-	path = plugin\\beorn_lib
-	url = git@github.com:PAntoine/beorn_lib.git
-	branch = release_1.0.5
+[submodule "plugin/beorn_lib"]
+	path = plugin/beorn_lib
+	url = /home/pantoine/development/beorn_lib/
