--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,8 @@
 [submodule "plugin/beorn_lib"]
 	path = plugin/beorn_lib
-	branch = release_1.1.2
+	branch = release_1.5.0
 	url = https://github.com/PAntoine/beorn_lib.git
+[submodule "beorn_lib"]
+	path = beorn_lib
+	url = https://github.com/PAntoine/beorn_lib.git
+	branch = release_1.5.0
